third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/start-bracket.stderr
TOML parse error at line 2, column 6
  |
2 | [xyz = 5
  |      ^
invalid table header
expected `.`, `]`
